--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -39,6 +39,7 @@
                         android:paddingTop="5dp"
                         android:text="原始"/>
                     <TextView
+                        android:id="@+id/data_all_charge"
                         android:layout_below="@+id/tv1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -74,6 +75,7 @@
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                     <ImageView
+                        android:id="@+id/data_charge_img1"
                         android:src="@mipmap/data_checkout"
                         android:layout_marginLeft="5dp"
                         android:layout_gravity="center"
@@ -111,7 +113,7 @@
                         android:paddingTop="5dp"
                         android:text="原始"/>
                     <TextView
-
+                        android:id="@+id/data_base_charge"
                         android:layout_below="@+id/tv2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -147,6 +149,7 @@
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                     <ImageView
+                        android:id="@+id/data_charge_img2"
                         android:src="@mipmap/data_checkout"
                         android:layout_marginLeft="5dp"
                         android:layout_gravity="center"
@@ -184,6 +187,7 @@
                         android:paddingTop="5dp"
                         android:text="原始"/>
                     <TextView
+                        android:id="@+id/data_year_charge"
                         android:layout_below="@+id/tv3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -219,6 +223,7 @@
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                     <ImageView
+                        android:id="@+id/data_charge_img3"
                         android:src="@mipmap/data_checkout"
                         android:layout_marginLeft="5dp"
                         android:layout_gravity="center"
@@ -256,7 +261,7 @@
                         android:paddingTop="5dp"
                         android:text="原始"/>
                     <TextView
-                        android:id="@+id/electrical_num"
+                        android:id="@+id/data_forces_charge"
                         android:layout_below="@+id/tv7"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -279,7 +284,6 @@
                     <!--android:paddingTop="5dp"-->
                     <!--android:text="校验后"/>-->
                     <TextView
-                        android:layout_below="@+id/tv2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
@@ -325,6 +329,7 @@
                              android:textColor="@color/black"/>
                     </LinearLayout>
                     <tties.cn.energy.chart.LineDataChart
+                        android:id="@+id/data_chart"
                         android:layout_width="match_parent"
                         android:layout_height="200dp">
                     </tties.cn.energy.chart.LineDataChart>
