--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -32,7 +32,7 @@
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                     <TextView
-                        android:id="@+id/data_time_tv"
+                        android:id="@+id/datafragment_time_tv"
                         android:layout_marginTop="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -42,18 +42,18 @@
                         android:text="3月"
                         android:textSize="18sp"/>
                     <tties.cn.energy.chart.LineDataChart
-                        android:id="@+id/chart"
-                        android:layout_below="@+id/data_time_tv"
+                        android:id="@+id/datafragment_chart"
+                        android:layout_below="@+id/datafragment_time_tv"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="100dp"
                         android:background="@color/orangered"
                         android:padding="12dp" >
                     </tties.cn.energy.chart.LineDataChart>
                     <LinearLayout
-                        android:layout_below="@+id/chart"
+                        android:layout_below="@+id/datafragment_chart"
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="80dp">
                          <ImageView
                              android:layout_width="0dp"
                              android:layout_height="wrap_content"
@@ -66,22 +66,21 @@
                              android:layout_height="wrap_content"
                              android:layout_weight="1"/>
                          <LinearLayout
-                             android:layout_marginTop="10dp"
                              android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
-                             android:layout_weight="2">
+                             android:layout_weight="3">
                               <TextView
+                                  android:id="@+id/datafragment_price"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
-                                  android:textSize="40sp"
+                                  android:textSize="30sp"
                                   android:text="0.8345"
                                   android:textColor="@color/white"/>
                               <TextView
                                   android:layout_width="wrap_content"
                                   android:layout_height="wrap_content"
                                   android:textColor="@color/white"
-                                  android:textSize="15sp"
                                   android:text="上月度电成本（元）"/>
                          </LinearLayout>
                     </LinearLayout>
