--- a/app/src/main/res/layout/activity_energy__force.xml
+++ b/app/src/main/res/layout/activity_energy__force.xml
@@ -55,6 +55,7 @@
             android:background="@drawable/selector_layout">
 
             <TextView
+                android:id="@+id/energy_force_havekw"
                 android:gravity="center"
                 android:layout_weight="1"
                 android:layout_gravity="center"
@@ -62,8 +63,9 @@
                 android:layout_height="match_parent"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:text="1500kW" />
+                android:text="0kW" />
             <TextView
+                android:id="@+id/energy_force_nokvar"
                 android:gravity="center"
                 android:layout_weight="1"
                 android:layout_gravity="center"
@@ -71,8 +73,9 @@
                 android:layout_height="match_parent"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:text="22433kVar" />
+                android:text="0kVar" />
             <TextView
+                android:id="@+id/energy_force_num"
                 android:gravity="center"
                 android:layout_weight="1"
                 android:layout_gravity="center"
@@ -80,7 +83,7 @@
                 android:layout_height="match_parent"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:text="0.98" />
+                android:text="0" />
         </LinearLayout>
         <View
 
@@ -97,7 +100,6 @@
                 android:layout_width="0dp"
                 android:gravity="center"
                 android:textColor="@color/black"
-
                 android:layout_height="wrap_content"
                 android:text="功率因数历史趋势"/>
             <TextView
@@ -126,6 +128,7 @@
 
                 />
             <ImageView
+                android:id="@+id/energy_force_select"
                 android:layout_marginRight="24dp"
                 android:background="@color/black"
                 android:src="@mipmap/arrows"
@@ -137,6 +140,7 @@
             android:layout_height="200dp"
             android:orientation="vertical">
             <tties.cn.energy.chart.LineDataChart
+                android:id="@+id/energy_force_chart1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -161,11 +165,12 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="220dp"
             android:orientation="vertical">
             <tties.cn.energy.chart.LineDataChart
+                android:id="@+id/energy_force_chart2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="200dp">
             </tties.cn.energy.chart.LineDataChart>
         </LinearLayout>
     </LinearLayout>
